--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="icon" type="image/x-icon" href="img/favicon.png">
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 	<link rel="stylesheet" href="css/custom.css">
 </head>
 <body data-bs-spy="scroll" data-bs-offset="15" data-bs-target="#myScrollspy">
@@ -14,7 +15,7 @@
 		<div class="row">
 			<div class="col-md-2 side-nav d-sm-none d-none d-md-block d-lg-block" id="myScrollspy">
 				<div class="list-group">
-					<a href="#" class="d-block text-center mb-5"><img src="img/favicon.png" alt="" width="100"></a>
+					<a href="#" class="d-block text-center mb-5"><img src="img/logo.png" alt="" width="110"></a>
 					<a class="list-group-item list-group-item-action active" href="#home">Home</a>
 					<a class="list-group-item list-group-item-action" href="#about">About</a>
 					<a class="list-group-item list-group-item-action" href="#skills">Skills & Languages</a>
@@ -22,13 +23,18 @@
 					<a class="list-group-item list-group-item-action" href="#works">Works</a>
 					<a class="list-group-item list-group-item-action" href="#contact">Contact</a>
 				</div>
+				<div class="contact-sns">
+					<a href="https://www.linkedin.com/in/mya-thet-chel-039b68234/" target="_blank"><i class="bi bi-linkedin"></i></a>
+					<a href="mailto:myathetchel00@gmail.com" target="_blank"><i class="bi bi-envelope-fill"></i></a>
+					<a href="https://www.instagram.com/ai__rott/" target="_blank"><i class="bi bi-instagram"></i></a>
+				</div>
 			</div>
 			<div class="col-md-10 offset-md-2">
 				<div id="home" >
 					<div class="row main-visual">
 						<div class="col-md-5 col-sm-12 offset-md-1">
 							<div class="main-visual__pic">
-								<img src="img/my-pic.png" alt="" width="100%">
+								<!-- <img src="img/my-profile.png" alt="" width="100%"> -->
 							</div>
 						</div>
 						<div class="col-md-6 col-sm-12">
@@ -43,15 +49,29 @@
 				</div>
 
 				<div id="about" class="section py-5">
-					<h2>About</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper malesuada ante. Vestibulum id metus ac nisl bibendum scelerisque non non purus. Suspendisse varius nibh non aliquet sagittis. In tincidunt orci sit amet elementum vestibulum. Vivamus fermentum in arcu in aliquam. Quisque aliquam porta odio in fringilla. Vivamus nisl leo, blandit at bibendum eu, tristique eget risus. Integer aliquet quam ut elit suscipit, id interdum neque porttitor. Integer faucibus ligula.</p>
-					<p>Quis quam ut magna consequat faucibus. Pellentesque eget nisi a mi suscipit tincidunt. Ut tempus dictum risus. Pellentesque viverra sagittis quam at mattis. Suspendisse potenti. Aliquam sit amet gravida nibh, facilisis gravida odio. Phasellus auctor velit at lacus blandit, commodo iaculis justo viverra. Etiam vitae est arcu. Mauris vel congue dolor. Aliquam eget mi mi. Fusce quam tortor, commodo ac dui quis, bibendum viverra erat. Maecenas mattis lectus enim, quis tincidunt dui molestie euismod. Curabitur et diam tristique, accumsan nunc eu, hendrerit tellus.</p>
-					 <p>Orci facilisis, dignissim tortor vitae, ultrices mi. Vestibulum a iaculis lacus. Phasellus vitae convallis ligula, nec volutpat tellus. Vivamus scelerisque mollis nisl, nec vehicula elit egestas a. Sed luctus metus id mi gravida, faucibus convallis neque pretium. Maecenas quis sapien ut leo fringilla tempor vitae sit amet leo. Donec imperdiet tempus placerat. Pellentesque pulvinar ultrices nunc sed ultrices. Morbi vel mi pretium, fermentum lacus et, viverra tellus. Phasellus sodales libero nec dui convallis, sit amet fermentum sapien auctor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed eu elementum nibh, quis varius libero.</p>
-					<p>Nam eget purus nec est consectetur vehicula. Nullam ultrices nisl risus, in viverra libero egestas sit amet. Etiam porttitor dolor non eros pulvinar malesuada. Vestibulum sit amet est mollis nulla tempus aliquet. Praesent luctus hendrerit arcu non laoreet. Morbi consequat placerat magna, ac ornare odio sagittis sed. Donec vitae ullamcorper purus. Vivamus non metus ac justo porta volutpat.</p>
-					<p>Pulvinar leo id risus pellentesque vestibulum. Sed diam libero, sodales eget sapien vel, porttitor bibendum enim. Donec sed nibh vitae lorem porttitor blandit in nec ante. Pellentesque vitae metus ipsum. Phasellus sed nunc ac sem malesuada condimentum. Etiam in aliquam lectus. Nam vel sapien diam. Donec pharetra id arcu eget blandit. Proin imperdiet mattis augue in porttitor. Quisque tempus enim id lobortis feugiat. Suspendisse tincidunt risus quis dolor fringilla blandit. Ut sed sapien at purus lacinia porttitor. Nullam iaculis, felis a pretium ornare, dolor nisl semper tortor, vel sagittis lacus est consequat eros. Sed id pretium nisl. Curabitur dolor nisl, laoreet vitae aliquam id.</p>
-				</div>
+					<div class="container">
+						<h2 class="">About</h2>
+						<p class="">
+							Over 6 years of experience as a social worker.<br>
+							Enjoy solving problems most efficiently while working in multicultural environments.<br>
+							Do coding as an art more than a tool. <br>
+							Working in Japan since 2019.<br>
+							Have 1-year of experience in web design and 4 years of experience creating websites.<br>
+							Proficient understanding of web markup, including HTML and CSS coding, WordPress, and design tools (Illustrator, Photoshop).<br>
+							Experience creating wire design with Adobe XD and Figma.
+						</p>
+						<div class="row">
+							<div class="col-md-4 col-sm-12">
+								aaa
+							</div>
+							<div class="col-md-8 col-sm-12">
+								
+							</div>
+						</div>
+					</div><!--container-->
+				</div><!--#about-->
 			</div>
-			<div class="col-md-10 offset-md-2">
+			<!-- <div class="col-md-10 offset-md-2">
 				<div class="area" >
 					<ul class="circles">
 							<li></li>
@@ -66,7 +86,7 @@
 							<li></li>
 					</ul>
 				</div>
-			</div>
+			</div> -->
 
 		</div><!--row-->
 
