--- a/backup/index_backup.html
+++ b/backup/index_backup.html
@@ -56,24 +56,26 @@
 				</div>
 			</div>
 			<div class="col-md-10 offset-md-2" id="main">
-				<div class="row main-visual" id="home">
-					<div class="col-md-5 col-sm-12 offset-md-1">
-						<div class="main-visual__pic">
-							<!-- <img src="img/my-profile.png" alt="" width="100%"> -->
+				<div id="home" >
+					<div class="row main-visual">
+						<div class="col-md-5 col-sm-12 offset-md-1">
+							<div class="main-visual__pic">
+								<!-- <img src="img/my-profile.png" alt="" width="100%"> -->
+							</div>
 						</div>
-					</div>
-					<div class="col-md-6 col-sm-12">
-						<div class="main-visual__intro">
-							<p class="main-visual__intro--greet bg-marker d-inline">Hello, I am</p>
-							<div class="main-visual__intro--name">Mya Thet Chel</div>
-							<p>Web Designer/ Web Developer</p>
-							<a href="" class="btn">Download CV</a>
+						<div class="col-md-6 col-sm-12">
+							<div class="main-visual__intro">
+								<p class="main-visual__intro--greet bg-marker d-inline">Hello, I am</p>
+								<div class="main-visual__intro--name">Mya Thet Chel</div>
+								<p>Web Designer/ Web Developer</p>
+								<a href="" class="btn">Download CV</a>
+							</div>
 						</div>
 					</div>
 				</div><!--home-->
 
-				<div id="about" class="section">
-					<div class="container py-5">
+				<div id="about" class="section py-5">
+					<div class="container">
 						<h2 class="">About</h2>
 						<p class="">
 							Over 6 years of experience as a social worker.<br>
@@ -95,8 +97,8 @@
 					</div><!--container-->
 				</div><!--#about-->
 
-				<div id="skills" class="section">
-					<div class="container py-5">
+				<div id="skills" class="section py-5">
+					<div class="container">
 						<h2 class="">Skills & Languages</h2>
 						<div class="skill-bar">
 							<p>HTML/CSS</p>
