--- a/index.html
+++ b/index.html
@@ -57,16 +57,24 @@
 			</div>
 			<div class="col-md-10 offset-md-2" id="main">
 				<div class="row main-visual" id="home">
-					<div class="col-md-5 col-sm-12 offset-md-1">
+					<!-- <div class="col-md-5 col-sm-12 offset-md-1">
 						<div class="main-visual__pic">
-							<!-- <img src="img/my-profile.png" alt="" width="100%"> -->
+							 <img src="img/my-profile.png" alt="" width="100%"> 
 						</div>
-					</div>
-					<div class="col-md-6 col-sm-12">
+					</div> -->
+					<div class="col-md-10 col-sm-12 offset-md-2">
 						<div class="main-visual__intro">
-							<p class="main-visual__intro--greet bg-marker d-inline">Hello, I am</p>
+							<h1>Hello! I am Mya Thet Chel<br><span class="ityped"></span></h1>
+							<script src="https://unpkg.com/ityped@0.0.10"></script>
+							  <script>
+								window.ityped.init(document.querySelector('.ityped'),{
+									strings: ['I love programming!','I make web sites using php and js','It is very interesting!'],
+									loop: true
+								})
+							</script>
+							<!-- <p class="main-visual__intro--greet bg-marker d-inline">Hello, I am</p>
 							<div class="main-visual__intro--name">Mya Thet Chel</div>
-							<p>Web Designer/ Web Developer</p>
+							<p>Web Designer/ Web Developer</p> -->
 							<a href="" class="btn">Download CV</a>
 						</div>
 					</div>
