--- a/index-version2.html
+++ b/index-version2.html
@@ -12,6 +12,14 @@
 	<div class="main">
 		<div class="greeting-text">hello!</div>
 		<div class="clip-text">MYA THET CHEL</div>
+		<h1>Hello! How are you?<br><span class="ityped"></span></h1>
+        <script src="https://unpkg.com/ityped@0.0.10"></script>
+      	<script>
+            window.ityped.init(document.querySelector('.ityped'),{
+                strings: ['I love programming!','I make web sites using php and js','I It is very interesting!'],
+                loop: true
+            })
+        </script>
 	</div>
 	<div>
 		<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam distinctio commodi beatae ea cupiditate quia nihil repellat. Id, saepe iure, eum minus, animi reiciendis totam blanditiis provident hic deserunt consequatur.</p>
