--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="keywords" content="portfolio, portfolio design, portfolio website, personal portfolio" />
+    <meta name="description" content="Welcome to Mya Thet Chel's Portfolio Website. Web Designer and Markup Engineer" />
 	<title>Portfolio - Mya Thet Chel</title>
 	<link rel="icon" type="image/x-icon" href="img/favicon.png">
 	<link rel="stylesheet" href="css/stye.css">
@@ -36,10 +38,10 @@
     <div id="navbar">
         <nav class="navigation">
           <ul>
-			<li class="nav-logo-wrap">
+			<!-- <li class="nav-logo-wrap">
 				<a href="#"><img src="img/logo-black.png" alt="" class="nav-logo"></a>
-			</li>
-            <li>
+			</li> -->
+            <li class="nav-side-menu">
               <a href="#about">About</a>
               <a href="#skills">Skills & Languages</a>
               <a href="#experience">Experience</a>
@@ -50,7 +52,7 @@
         </nav>
 	</div>
 	 <!--sp nav-->
-	 <div class="sp">
+	 <div class="">
 		<div class="openbtn1"><span></span><span></span><span></span></div>
 		<nav id="g-nav">
 			<div id="g-nav-list"><!--ナビの数が増えた場合縦スクロールするためのdiv※不要なら削除-->
@@ -106,6 +108,7 @@
 					<div class="skill-bar basic" data-skill="GitHub"></div>
 				</div>
 			</div>
+			
 		</section>
 		<section id="experience">
 			<h1>Experience</h1>
