--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
 	<!--main content start here-->
 	<div class="main-content">
-		<section id="about" class="reveal">
-			<div class="wrapper">
+		<section id="about">
+			<div class="wrapper reveal">
 				<div class="about-row">
 					<div></div>
 					<div>
