--- a/index.html
+++ b/index.html
@@ -74,17 +74,16 @@
 						<h3>Hello!<br>I am Mya Thet Chel<br><span class="ityped"></span></h3>
 						<script>
 							window.ityped.init(document.querySelector('.ityped'),{
-								strings: ['I am Web Designer', 'and Markup Engineer.', 'Take a look my porfolio website!'],
+								strings: ['I am Web Designer', 'and Markup Engineer.', 'Take a look at my porfolio website!'],
 								loop: true
 							})
 						</script>
 						<p>
-							Enjoy solving problems most efficiently while working in multicultural environments.<br>
-							Over 6 years of experience as a social worker.<br>
-							Do coding as an art more than a tool.<br>
-							Working in Japan since 2019. 
-							Proficient understanding of web markup, including HTML and CSS coding, WordPress, and design tools (Illustrator, Photoshop).<br>
-							Experience creating wire design with Adobe XD and Figma.
+							Meticulous web developer requires creativity, collaborative work environment and critical thinking.<br>
+							Over 6 years of experience as a creative web developer dedicated to delivering compelling and attractive websites to meet customer satisfaction.<br>
+							Proven experience developing consumer-focused websites using HTML, CSS, WordPress, Illustrator, Photoshop, PHP and JavaScript as well as creating wire design with Adobe XD and Figma.<br> 
+							Innovative and energetic mind with ability to follow industry and technological trends, and facilitating early adoption of innovations.<br>
+							
 						</p>
 						<div class="row">
 							<div class="col-left">
