--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
               <a href="#skills">Skills & Languages</a>
               <a href="#experience">Experience</a>
               <a href="#projects">My Projects</a>
+			  <a href="#projects" class="lang">
+				  <i class="fa-solid fa-globe"></i>
+				  <span class="lang-change">Japanese</span>
+				</a>
             </li>
 
           </ul>
@@ -55,6 +59,7 @@
 					<li><a href="#skills">Skills & Languages</a></li>	
 					<li><a href="#experience">Experience</a></li>	
 					<li><a href="#projects">My Projects</a></li>
+					<li><i class="fa-solid fa-globe"></i><a href="">JP</a>/<a href="">EN</a></li>
 				</ul>
 
 			</div>
