--- a/index.html
+++ b/index.html
@@ -134,20 +134,21 @@
 
 				<h2 class="mt-3">Soft Skills</h2>
 				<div class="skill-wrap soft">
-					<div>Problem-solving</div>
-					<div>Time management</div>
-					<div>Self-motivated and quick learner</div>
-					<div>Flexibility</div>
-					<div>Responsibility</div>
-					<div>Open-mindedness</div>
-					<div>Active listening</div>
+					<div>Problem-solving : Ability to solve complex designs ,layouts and UI/UX designs to deliver quality products to meet customer satisfaction.</div>
+					<div>Time Management : Over 95% of tasks were finished before due time.</div>
+					<div>Organizational : Utilizing various tools create documents, notes, and manuals to help keeping tracks of various phases of website development life cycle.</div>
+					<div>Flexibility : Adapt to different organization to meet the standards of respective work culture.</div>
+					<div>Motivation : Driven desire to learn new technologies and tools to stay in trends that can lead to new ideas. </div>
+					<div>Leadership : Lead and mentor team members with a passion to grow together as a team.</div>
+					<div>Planning : Oversaw communications with stakeholders, internal and external team members to help execute a solid plan to deliver project goals.</div>
+					<div>Communication : Good listener and always try to express ideas and opinions to stakeholders, internal and external team members and customers.</div>
 				</div>
 
 				<h2 class="mt-3">Languages</h2>
 				<ul>
 					<li>Myanmar (Native)</li>
-					<li>English (upper-intermediate)</li>
-					<li>Japanese (Business-level)</li>
+					<li>English (Advanced)</li>
+					<li>Japanese (Fluent)</li>
 				</ul>
 			</div>
 			
@@ -165,9 +166,9 @@
 						<div class="responsibility">
 							<em>Responsibility</em>
 							<ul>
-								<li>Creating Original Nobori (Japanese Flag) Design to fulfill clients' requests by using Adobe Illustrator and Photoshop.</li>
-								<li>Interpretation and explanation of the instructions from Japan ⇌ Myanmar.</li>
-								<li>Check the received data which are capable to print (CMYK color, Outline Fonts, Linked Image, etc.) from clients.</li>
+								<li>Creating Original Nobori (Japanese Flag) designs by using Adobe Illustrator and Photoshop to meet customer demands.</li>
+								<li>Coordinate cross cultural teams(Japan ⇌ Myanmar) efficiently to increase mutual understanding of tasks for quality deliverables.</li>
+								<li>Analyze datas from internal and external customers to help processing requirements for printing.(CMYK color, Outline Fonts, Linked Image, etc.) .</li>
 							</ul>
 						</div>
 					</div>
@@ -180,13 +181,12 @@
 						<div class="responsibility">
 							<em>Responsibility</em>
 							<ul>
-								<li>Worked as the web design team member of the web marketing department.</li>
-								<li>Coded and updated Company EC websites using HTML, CSS, Materialize CSS, JavaScript, and jQuery languages.</li>
-								<li>Create and Manage the company homepage by using WordPress.</li>
-								<li>Coded landing pages, and new product pages based on wire/structure plans created by the designer.</li>
-								<li>Created the company’s Owned Media website by using WordPress.</li>
-								<li>Assist web designer in creating products banner (eg. cutting out objects and compositing the image by using Photoshop & 4DBox.)</li>
-								<li>Mentor Myanmar coding team members and manage the tasks for them.</li>
+								<li>Working as the web design team member of the web marketing department.</li>
+								<li>Coding and updating Company EC websites using HTML, CSS, Materialize CSS, JavaScript, and jQuery languages.</li>
+								<li>Creating and Managing in-house media website and homepage by using WordPress.</li>
+								<li>Coding landing pages, and new product pages based on wire/structure plans created by the designer.</li>
+								<li>Assisting web designer in creating products banner (eg. cutting out objects and compositing the image by using Photoshop & 4DBox.)</li>
+								<li>Schedule and task management by mentoring and communicating with Myanmar coding team members.</li>
 							</ul>
 						</div>
 					</div>
@@ -202,13 +202,13 @@
 								<li>Web development using HTML, CSS, and JavaScript for features of both mobile and desktop platforms (responsive web design coding).</li>
 								<li>Experience in creating homepage designs using Adobe Illustrator, Photoshop, Adobe XD, and Figma.</li>
 								<li>Create clients' homepage websites based on the wireframe.</li>
-								<li>Upgrade, maintain, and provide the clients` websites.</li>
-								<li>Provided front-end website development using WordPress.</li>
-								<li>Create a user manual for a website (WordPress) that helps clients who want to edit and add articles by themselves.</li>
-								<li>Multi-tasked across multiple functions and roles to meet deadlines and organizational expectations.</li>
+								<li>Upgrade, maintain, and deliver the clients` websites.</li>
+								<li>Front-end website development using WordPress.</li>
+								<li>Create a user manual for a website (WordPress) that helps customers to control editing and adding articles manually.</li>
+								<li>Communicating with multiple stakeholders and team members to help defining project goal with reasonable timeframe.</li>
 								<li>Create GoogleAnalytics Report.</li>
-								<li>Create web design with guidelines and feedback from Senior UI/UX Designer.<br>
-									If the design is agreed upon, be in charge of implementation. Including coding HTML / CSS, editing images and banners that are used in websites, creating new content pages, and migrating existing content pages.
+								<li>Productive meeting with Senior UI/UX Designer to define deliverables.<br>
+									Such as implementation, coding using HTML / CSS and WordPress, editing images and banners used in websites, creating new content pages, and migrating existing content pages.
 								</li>
 							</ul>
 						</div>
