--- a/jp.html
+++ b/jp.html
@@ -11,19 +11,49 @@
 	<link rel="stylesheet" href="css/stye.css">
 	<link rel="stylesheet" href="css/style.scss">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+	<style>
+		body {
+			font-family: 'Zen Maru Gothic', sans-serif;
+		}
+
+		.main-content.jap h1, p, nav li a {
+			font-family: 'Zen Maru Gothic', sans-serif;
+		}
+		.hero-title {
+			font-family: 'Zen Maru Gothic', sans-serif;
+			font-weight: bold;
+			letter-spacing: 0;
+			font-size: 7vw;
+		}
+		.hero-title::before {
+			bottom: -13px;
+		}
+		@media screen and (max-width: 991px) {
+			.hero-title {
+				font-size: 12vw;
+			}
+			.hero-title::before {
+				font-size: 1.2rem;
+				bottom: -18px;
+			}
+		}
+
+	</style>
 </head>
 <body>
     <div id="hero" class="header">
 		<div class="hero-title">
-			<span>Port</span>folio
+			<span>ポート</span>フォリオ
 		</div>
 		<!-- <div class="hero-row">
 			<div class="hero-col-text">
 				<div class="hero-title">
-					<span>Port</span>folio
+					<span>Mya Thet Chel</span>ポートフォリオ
 				</div>
 			</div>
 			<div class="hero-col-img">
+
 			</div>
 		</div> -->
 	</div>
@@ -41,9 +71,9 @@
               <a href="#skills">Skills & Languages</a>
               <a href="#experience">Experience</a>
               <a href="#projects">Projects</a>
-			  <a href="jp.html" class="lang">
+			  <a href="index.html" class="lang">
 				  <i class="fa-solid fa-globe"></i>
-				  <span class="lang-change">Japanese</span>
+				  <span class="lang-change">英語</span>
 				</a>
             </li>
 
@@ -72,7 +102,7 @@
 	<!--Navigation end-->
 
 	<!--main content start here-->
-	<div class="main-content">
+	<div class="main-content jap">
 		<section id="about">
 			<div class="wrapper reveal">
 				<h1><span>About</span></h1>
@@ -82,31 +112,30 @@
 					</div>
 					<div>
 						<script src="https://unpkg.com/ityped@0.0.10"></script>
-						<h3>Hello!<br>I am Mya Thet Chel<br><span class="ityped"></span></h3>
+						<h3>こんにちは！<br><span class="ityped"></span></h3>
 						<script>
 							window.ityped.init(document.querySelector('.ityped'),{
-								strings: ['I am Web Designer', 'and Markup Engineer.', 'Take a look at my porfolio website!'],
+								strings: ['ミャテッチェと申します。', 'どうぞよろしくお願いいたします！'],
 								loop: true
 							})
 						</script>
 						<p>
-							A Meticulous web developer requires creativity, a collaborative work environment, and critical thinking.<br>
-							Over 6 years of experience as a creative web developer dedicated to delivering compelling and attractive websites to meet customer satisfaction.<br>
-							Proven experience developing consumer-focused websites using HTML, CSS, WordPress, Illustrator, Photoshop, PHP, and JavaScript as well as creating wire design with Adobe XD and Figma.<br>
-							Innovative and energetic mind with an ability to follow industry and technological trends, and facilitate early adoption of innovations.
-							
+							ヤンゴン外国語大学を日本語専門で卒業後、オリジナルのぼり旗販売・広告企業のミャンマー支社にデータ処理やデザイン制作担当として入社しました。
+							その後日本にある本社に移転となり、マーケティング部WEBデザイン班のコーディングチームにコーダーとして３年間働きました。
+							現在は東京の広告・ブランディング企業にウエブデザイナー、マークアップエンジニアとして活動しております。
+							レスポンシブサイト作成、WordPress利用の大学のホームページ作成、 Illustrator, Photoshop、Adobe XD 、Figmaのデザインツール利用してラフデザイン作成に経験があります。
 						</p>
 						<ul>
-							<li>Date of Birth: 12 May 1996</li>
-							<li>Education: Bachelor of Arts (Yangon University of Foreign Languages - Japanese major) </li>
-							<li>Nationality: Myanmar</li>
-							<li>Address: Koto-ku, Tokyo, Japan</li>
-							<li>Email: <a href="mailto:myathetchel00@gmail.com">myathetchel00@gmail.com</a></li>
+							<li>生年月日：1996年5月12日（26歳）</li>
+							<li>大学: ヤンゴン外国語大学日本語専門卒業</li>
+							<li>国籍: ミャンマー</li>
+							<li>住所: 江東区、東京都</li>
+							<li>メールアドレス: <a href="mailto:myathetchel00@gmail.com">myathetchel00@gmail.com</a></li>
 						</ul>
 					</div>
 				</div>
 				<div>
-					<a href="" class="btn btn-border">Download Resume</a>
+					<a href="" class="btn btn-border">履歴書・職務経歴書はこちら</a>
 				</div>
 				
 			</div>
@@ -114,7 +143,7 @@
 		<section id="skills">
 			<div class="wrapper reveal">
 				<h1>Skills & Languages</h1>
-				<h2>Hard Skills</h2>
+				<h2>ハードスキル</h2>
 				<div class="skill-wrap">
 					<div><img class="vector-icon" src="svg/html.svg" alt="HTML5">HTML</div>
 					<div><img class="vector-icon" src="svg/css3.svg" alt="CSS">CSS</div>
@@ -134,15 +163,15 @@
 					<div><img class="vector-icon" src="svg/responsive.svg" alt="Responsive Website">Responsive Website</div>
 				</div>
 
-				<h2 class="mt-3">Soft Skills</h2>
+				<h2 class="mt-3">ソフトスキル</h2>
 				<div class="skill-wrap soft">
 					<table>
 						<tr>
-							<td><div>Problem-solving</div></td>
+							<td><div>問題解決</div></td>
 							<td>Ability to solve complex designs, layouts, and UI/UX designs to deliver quality products to meet customer satisfaction.</td>
 						</tr>
 						<tr>
-							<td><div>Time Management</div></td>
+							<td><div>時間管理</div></td>
 							<td>Over 95% of tasks were finished before due time.</td>
 						</tr>
 						<tr>
@@ -150,33 +179,34 @@
 							<td>Utilizing various tools to create documents, notes, and manuals to help keep track of various phases of the website development life cycle.</td>
 						</tr>
 						<tr>
-							<td><div>Flexibility</div></td>
+							<td><div>柔軟性</div></td>
 							<td>Adapt to a different organization to meet the standards of the respective work culture.</td>
 						</tr>
 						<tr>
-							<td><div>Motivation</div></td>
+							<td><div>モチベーション</div></td>
 							<td>Driven desire to learn new technologies and tools to stay in trends that can lead to new ideas.</td>
 						</tr>
 						<tr>
-							<td><div>Planning</div></td>
+							<td><div>プランニング</div></td>
 							<td>Oversaw communications with stakeholders, and internal and external team members to help execute a solid plan to deliver project goals.</td>
 						</tr>
 						<tr>
-							<td><div>Communication</div></td>
-							<td>Good listener and always try to express ideas and opinions to stakeholders, internal and external team members, and customers.</td>
+							<td><div>コミュニケーション</div></td>
+							<td>自分の所属している部署の仕事を円滑にしたり、会社の目標を達成するために、自分ができることは何かを常に意識して行動しています。
+								同僚が困っていないか相談に乗ったり、何か改善できることはないかを考え、良いと思う案は小さなことでも先輩や上司に相談して、自ら率先して行うようにしています。</td>
 						</tr>
 						<tr>
-							<td><div>Leadership</div></td>
+							<td><div>リーダーシップ</div></td>
 							<td>Lead and mentor team members with a passion to grow together as a team.</td>
 						</tr>
 					</table>
 				</div>
 
-				<h2 class="mt-3">Languages</h2>
+				<h2 class="mt-3">言語</h2>
 				<ul>
-					<li>Myanmar (Native)</li>
-					<li>English (Advanced)</li>
-					<li>Japanese (Fluent)</li>
+					<li>ミャンマー語 (母語)</li>
+					<li>英語 (中級)</li>
+					<li>日本語 (上級)</li>
 				</ul>
 			</div>
 			
@@ -193,7 +223,9 @@
 						</div>
 						<div class="responsibility">
 							<ul>
-								<li>Creating Original Nobori (Japanese Flag) designs by using Adobe Illustrator and Photoshop to meet customer demands.</li>
+								<li>Adobe Illustrator、Photoshopや素材などを利用してお客様からいただいた手書きオーダーシートや参考データを見ながらデザイン制作。
+									お客様の希望を叶えるためいろいろな場面や目線から見てなるべくご期待に応えることができるよう対応しました。
+								</li>
 								<li>Coordinate cross-cultural teams(Japan ⇌ Myanmar) efficiently to increase mutual understanding of tasks for quality deliverables.</li>
 								<li>Analyze data from internal and external customers to help process requirements for printing (CMYK color, Outline Fonts, Linked Image, etc.).</li>
 							</ul>
@@ -208,8 +240,9 @@
 						<div class="responsibility">
 							<ul>
 								<li>Working as the web design team member of the web marketing department.</li>
-								<li>Coding and updating Company EC websites using HTML, CSS, Materialize CSS, JavaScript, and jQuery languages.</li>
-								<li>Creating and Managing in-house media website and homepage by using WordPress.</li>
+								<li>のぼり旗や横断幕、タペストリー等印刷系の販促グッズを紹介する広告用ランディングページや商品のクッションページのレスポンシブ対応を制作。基本はデザインの方からもらったラフを参考に作成。
+									HTML側の記述はソース構造を複雑化しない様に心掛け、CSS側はモバイルファーストで組み込みを行い、テキストもなるべくCSSで再現できる部分は対応を行った。またブレイクポイントがPC/SPのみの指定だったがタブレットで閲覧することも想像し、基本SPデザインを表示しつつ見易さの部分を配慮してCSS調整を行った。レスポンシブの対応自体はメディアクエリやMaterializeを使っている。</li>
+								<li>WordPress使用の自社公式サイトや採用サイト、オウンドメディアサイトの作成。WordPressテーマのカスタマイズやプラグインの使用で、サイト修正やページ追加を対応しました。必要であれば、サイト内に新しいCSSやJavaScriptの追加も行いました。</li>
 								<li>Coding landing pages, and new product pages based on wire/structure plans created by the designer.</li>
 								<li>Assisting web designer in creating products banner (eg. cutting out objects and compositing the image by using Photoshop & 4DBox.)</li>
 								<li>Schedule and task management by mentoring and communicating with Myanmar coding team members.</li>
@@ -263,8 +296,8 @@
 								<span>Responsive</span>
 							</div>
 							<p>
-								Coding new product pages based on the designs that are created by the designer.<br>
-								Updating information on the products page, adding options, and editing the order form of the eccomerce sites.
+								既に公開されているサイトのリニューアル制作や新商品の注文ページ作成は案件となり、商品販売ページは通販専用ツールを用いて制作。
+複数人でコーディングを行う体制だったので、この案件のみに適用するコーディングルールを設け制作を進めた。デザインの部分で、いくつか同じデザインの派生ページが発生した為、マークアップ・スタイル記述はパーツを細分化して、どのブロックでも使える形でコーディング。注文ページ制作の際には、PHPやjQueryを使ったことがあけど、あまり詳しくないので、分からないことがる時はネット上での検索や自習しながらタスク対応しました。
 							</p>
 							<img src="img/ec-site.png" alt="">
 						</div>
@@ -307,9 +340,7 @@
 								<span>Responsive</span>
 							</div>
 							<p>
-								Update and edit recruit information.<br>
-								Create and update new content for the members' interview section.<br>
-								Manage versions of plugins and WordPress.
+								WordPress使用の自社公式サイトや採用サイト、オウンドメディアサイトの作成。WordPressテーマのカスタマイズやプラグインの使用で、サイト修正やページ追加を対応しました。必要であれば、サイト内に新しいCSSやJavaScriptの追加も行いました。
 							</p>
 							<img src="img/itamiarts-recruit.png" alt="">
 							<a href="https://itamiarts-recruit.com/" target="_blank" class="to-page">View Website <i class="fa-solid fa-circle-arrow-right"></i></a>
