--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<li><a href="#skills">Skills & Languages</a></li>	
 					<li><a href="#experience">Experience</a></li>	
 					<li><a href="#projects">Projects</a></li>
-					<li><i class="fa-solid fa-globe"></i><a href="">JP</a>/<a href="">EN</a></li>
+					<li><i class="fa-solid fa-globe"></i><a href="jp.html">JP</a>/<a href="index.html">EN</a></li>
 				</ul>
 
 			</div>
@@ -132,6 +132,7 @@
 					<div><img class="vector-icon" src="svg/google-analytics.svg" alt="Google Analystics">Google Analystics</div>
 					<div><img class="vector-icon" src="svg/visual-studio-code.svg" alt="Visual Studio">Visual Studio</div>
 					<div><img class="vector-icon" src="svg/responsive.svg" alt="Responsive Website">Responsive Website</div>
+					<div><img class="vector-icon" src="svg/google.svg" alt="Responsive Website">Google Workspace Tools</div>
 				</div>
 
 				<h2 class="mt-3">Soft Skills</h2>
@@ -229,9 +230,9 @@
 								<li>Create clients' homepage websites based on the wireframe.</li>
 								<li>Upgrade, maintain, and deliver the clients` websites.</li>
 								<li>Front-end website development using WordPress.</li>
-								<li>Create a user manual for a website (WordPress) that helps customers to control editing and adding articles manually.</li>
+								<li>Create a user manual using Microsoft PowerPoint, and Google Workspace Tools for a website (WordPress) that helps customers to control editing and adding articles manually.</li>
 								<li>Communicating with multiple stakeholders and team members to help define project goals within a reasonable timeframe.</li>
-								<li>Create GoogleAnalytics Report.</li>
+								<li>Create a monthly report of GoogleAnalytics for the customer’s website.</li>
 								<li>Productive meeting with Senior UI/UX Designer to define deliverables.<br>
 									Such as implementation, coding using HTML / CSS and WordPress, editing images and banners used in websites, creating new content pages, and migrating existing content pages.
 								</li>
