--- a/jp.html
+++ b/jp.html
@@ -27,6 +27,7 @@
 			font-size: 7vw;
 		}
 		.hero-title::before {
+			content: "ミャテッチェ";
 			bottom: -13px;
 		}
 		@media screen and (max-width: 991px) {
@@ -67,10 +68,10 @@
 				<a href="#"><img src="img/favicon.png" alt="" class="nav-logo"></a>
 			</li>
             <li class="nav-side-menu">
-              <a href="#about"><span>About</span></a>
-              <a href="#skills">Skills & Languages</a>
-              <a href="#experience">Experience</a>
-              <a href="#projects">Projects</a>
+              <a href="#about"><span>自己紹介</span></a>
+              <a href="#skills">スキル・言語</a>
+              <a href="#experience">職務経歴</a>
+              <a href="#projects">プロジェクト</a>
 			  <a href="index.html" class="lang">
 				  <i class="fa-solid fa-globe"></i>
 				  <span class="lang-change">英語</span>
@@ -87,11 +88,11 @@
 			<div id="g-nav-list"><!--ナビの数が増えた場合縦スクロールするためのdiv※不要なら削除-->
 				<ul>
 					<li><a href="#"><img src="img/favicon.png" alt=""></a></li>	
-					<li><a href="#about">About</a></li>	
-					<li><a href="#skills">Skills & Languages</a></li>	
-					<li><a href="#experience">Experience</a></li>	
-					<li><a href="#projects">Projects</a></li>
-					<li><i class="fa-solid fa-globe"></i><a href="">JP</a>/<a href="">EN</a></li>
+					<li><a href="#about">自己紹介</a></li>	
+					<li><a href="#skills">スキル・言語</a></li>	
+					<li><a href="#experience">職務経歴</a></li>	
+					<li><a href="#projects">プロジェクト</a></li>
+					<li><i class="fa-solid fa-globe"></i><a href="jp.html">日本語</a>/<a href="index.html">英語</a></li>
 				</ul>
 
 			</div>
@@ -105,7 +106,7 @@
 	<div class="main-content jap">
 		<section id="about">
 			<div class="wrapper reveal">
-				<h1><span>About</span></h1>
+				<h1><span>自己紹介</span></h1>
 				<div class="about-row">
 					<div>
 						<img src="img/my-profile.png" alt="">
@@ -142,8 +143,8 @@
 		</section>
 		<section id="skills">
 			<div class="wrapper reveal">
-				<h1>Skills & Languages</h1>
-				<h2>ハードスキル</h2>
+				<h1>スキル・言語</h1>
+				<h2>スキル</h2>
 				<div class="skill-wrap">
 					<div><img class="vector-icon" src="svg/html.svg" alt="HTML5">HTML</div>
 					<div><img class="vector-icon" src="svg/css3.svg" alt="CSS">CSS</div>
@@ -161,45 +162,15 @@
 					<div><img class="vector-icon" src="svg/google-analytics.svg" alt="Google Analystics">Google Analystics</div>
 					<div><img class="vector-icon" src="svg/visual-studio-code.svg" alt="Visual Studio">Visual Studio</div>
 					<div><img class="vector-icon" src="svg/responsive.svg" alt="Responsive Website">Responsive Website</div>
+					<div><img class="vector-icon" src="svg/google.svg" alt="Responsive Website">Google Workspace Tools</div>
 				</div>
 
-				<h2 class="mt-3">ソフトスキル</h2>
+				<h2 class="mt-3">自己PR</h2>
 				<div class="skill-wrap soft">
-					<table>
-						<tr>
-							<td><div>問題解決</div></td>
-							<td>Ability to solve complex designs, layouts, and UI/UX designs to deliver quality products to meet customer satisfaction.</td>
-						</tr>
-						<tr>
-							<td><div>時間管理</div></td>
-							<td>Over 95% of tasks were finished before due time.</td>
-						</tr>
-						<tr>
-							<td><div>Organizational</div></td>
-							<td>Utilizing various tools to create documents, notes, and manuals to help keep track of various phases of the website development life cycle.</td>
-						</tr>
-						<tr>
-							<td><div>柔軟性</div></td>
-							<td>Adapt to a different organization to meet the standards of the respective work culture.</td>
-						</tr>
-						<tr>
-							<td><div>モチベーション</div></td>
-							<td>Driven desire to learn new technologies and tools to stay in trends that can lead to new ideas.</td>
-						</tr>
-						<tr>
-							<td><div>プランニング</div></td>
-							<td>Oversaw communications with stakeholders, and internal and external team members to help execute a solid plan to deliver project goals.</td>
-						</tr>
-						<tr>
-							<td><div>コミュニケーション</div></td>
-							<td>自分の所属している部署の仕事を円滑にしたり、会社の目標を達成するために、自分ができることは何かを常に意識して行動しています。
-								同僚が困っていないか相談に乗ったり、何か改善できることはないかを考え、良いと思う案は小さなことでも先輩や上司に相談して、自ら率先して行うようにしています。</td>
-						</tr>
-						<tr>
-							<td><div>リーダーシップ</div></td>
-							<td>Lead and mentor team members with a passion to grow together as a team.</td>
-						</tr>
-					</table>
+					私の強みは、自己成長に必要な知識を積極的に身につける「吸収力」です。
+					これは、大学を卒業後、デザインやコーディングの知識がなかった私は、ウエブデザイン班のコーディングチームメンバーとして活力できるようになったことで発揮されました。
+					当初はIllustrator や Photoshopなどのデザインツールの仕様もコーディングのやり方も全く分からず、困りましたが、ミスから学び、挑戦精神を持ちつつ、勉強に熱心に取り込みました。
+					その結果、1年目から自分が教えられる側から、教える側として
 				</div>
 
 				<h2 class="mt-3">言語</h2>
@@ -213,13 +184,13 @@
 		</section>
 		<section id="experience">
 			<div class="wrapper reveal"> 
-				<h1>Experience</h1>
+				<h1>職務経歴</h1>
 				<div class="experience-wrap">
 					<div class="experience-balloon reveal">
 						<div class="experience-header">
-							<div class="job-title">Data Analyst/ Designer</div>
-							<div class="company-name">Itamiarts Inc (Myanmar Branch)</div>
-							<div class="los">11/2017 ～ 06/2019</div>
+							<div class="job-title">データ分析/ デザイナー</div>
+							<div class="company-name">株式会社イタミアート (ミャンマー支店)</div>
+							<div class="los">2017年11月 ～ 2019年6月</div>
 						</div>
 						<div class="responsibility">
 							<ul>
@@ -233,9 +204,9 @@
 					</div>
 					<div class="experience-balloon reveal">
 						<div class="experience-header">
-							<div class="job-title">Web Coder</div>
-							<div class="company-name">Itamiarts Inc (Head Office)</div>
-							<div class="los">06/2019 ～ 02/2021</div>
+							<div class="job-title">ウエブコーダー</div>
+							<div class="company-name">株式会社イタミアート (本社)</div>
+							<div class="los">2019年6月 ～ 2021年2月</div>
 						</div>
 						<div class="responsibility">
 							<ul>
@@ -251,9 +222,9 @@
 					</div>
 					<div class="experience-balloon-last reveal">
 						<div class="experience-header">
-							<div class="job-title">Web Designer/Web markup Engineer</div>
-							<div class="company-name">NEXTERA Inc.</div>
-							<div class="los">03/2021 ～ Present</div>
+							<div class="job-title">ウエブデザイナー/マークアップエンジニア</div>
+							<div class="company-name">株式会社ネクステラ</div>
+							<div class="los">2021年3月 ～ 現在</div>
 						</div>
 						<div class="responsibility">
 							<ul>
@@ -276,7 +247,7 @@
 		</section>
 		<section id="projects">
 			<div class="wrapper reveal">
-				<h1>Projects</h1>
+				<h1>プロジェクト</h1>
 				<p>These are some of the projects that I have finished during my career years.</p>
 				<div class="works-items">
 					<div class="row">
