--- a/jp.html
+++ b/jp.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="keywords" content="portfolio, portfolio design, portfolio website, personal portfolio" />
     <meta name="description" content="Welcome to Mya Thet Chel's Portfolio Website. Web Designer and Markup Engineer" />
-	<title>Portfolio - Mya Thet Chel</title>
+	<title>ポートフォリオ - ミャテッチェ</title>
 	<link rel="icon" type="image/x-icon" href="img/favicon.png">
 	<link rel="stylesheet" href="css/stye.css">
 	<link rel="stylesheet" href="css/style.scss">
@@ -72,7 +72,7 @@
               <a href="#skills">スキル・言語</a>
               <a href="#experience">職務経歴</a>
               <a href="#projects">プロジェクト</a>
-			  <a href="index.html" class="lang">
+			  <a href="index.html" target="_blank" class="lang">
 				  <i class="fa-solid fa-globe"></i>
 				  <span class="lang-change">英語</span>
 				</a>
@@ -92,7 +92,7 @@
 					<li><a href="#skills">スキル・言語</a></li>	
 					<li><a href="#experience">職務経歴</a></li>	
 					<li><a href="#projects">プロジェクト</a></li>
-					<li><i class="fa-solid fa-globe"></i><a href="jp.html">日本語</a>/<a href="index.html">英語</a></li>
+					<li><i class="fa-solid fa-globe"></i><a href="jp.html" target="_blank">日本語</a>/<a href="index.html" target="_blank">英語</a></li>
 				</ul>
 
 			</div>
@@ -123,8 +123,8 @@
 						<p>
 							ヤンゴン外国語大学を日本語専門で卒業後、オリジナルのぼり旗販売・広告企業のミャンマー支社にデータ処理やデザイン制作担当として入社しました。
 							その後日本にある本社に移転となり、マーケティング部WEBデザイン班のコーディングチームにコーダーとして３年間働きました。
-							現在は東京の広告・ブランディング企業にウエブデザイナー、マークアップエンジニアとして活動しております。
-							レスポンシブサイト作成、WordPress利用の大学のホームページ作成、 Illustrator, Photoshop、Adobe XD 、Figmaのデザインツール利用してラフデザイン作成に経験があります。
+							現在は東京の広告・ブランディング企業にウエブデザイナー、マークアップエンジニアとして活動しております。<br>
+							Web業界での実務経験5年以上で、HTML/CSS、Materialize CSS、JavaScript、jQuery、PHP利用のレスポンシブサイト作成、WordPress利用の大学のホームページ作成、 Illustrator, Photoshop、Adobe XD 、Figmaのデザインツール利用してラフデザイン作成に経験があります。
 						</p>
 						<ul>
 							<li>生年月日：1996年5月12日（26歳）</li>
