--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <a href="#skills">Skills & Languages</a>
               <a href="#experience">Experience</a>
               <a href="#projects">Projects</a>
-			  <a href="jp.html" class="lang">
+			  <a href="jp.html" target="_blank" class="lang">
 				  <i class="fa-solid fa-globe"></i>
 				  <span class="lang-change">Japanese</span>
 				</a>
@@ -61,7 +61,7 @@
 					<li><a href="#skills">Skills & Languages</a></li>	
 					<li><a href="#experience">Experience</a></li>	
 					<li><a href="#projects">Projects</a></li>
-					<li><i class="fa-solid fa-globe"></i><a href="jp.html">JP</a>/<a href="index.html">EN</a></li>
+					<li><i class="fa-solid fa-globe"></i><a href="jp.html" target="_blank">JP</a>/<a href="index.html" target="_blank">EN</a></li>
 				</ul>
 
 			</div>
