--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 						</div>
 					</div>
 					<div>
-						<a href="" class="btn btn-border">Download Resume</a>
+						<a href="resume pdf/Resume.pdf" class="btn btn-border">Download Resume</a>
 					</div>
 	
 				</div>
