--- a/jp.html
+++ b/jp.html
@@ -137,7 +137,7 @@
 						</div>
 					</div>
 					<div>
-						<a href="" class="btn btn-border">履歴書・職務経歴書はこちら</a>
+						<a href="resume pdf/履歴書・職務経歴書.zip" class="btn btn-border">履歴書・職務経歴書はこちら</a>
 					</div>
 	
 				</div>
