--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 						</div>
 					</div>
 					<div>
-						<a href="resume pdf/Resume.pdf" class="btn btn-border">Download Resume</a>
+						<a href="resume pdf/Resume.pdf" class="btn btn-border" target="_blank">Download Resume</a>
 					</div>
 	
 				</div>
@@ -135,75 +135,74 @@
 						<div><img class="vector-icon" src="svg/google-analytics.svg" alt="Google Analystics">Google Analystics</div>
 						<div><img class="vector-icon" src="svg/visual-studio-code.svg" alt="Visual Studio">Visual Studio</div>
 						<div><img class="vector-icon" src="svg/responsive.svg" alt="Responsive Website">Responsive Website</div>
-						<div><img class="vector-icon" src="svg/google.svg" alt="Responsive Website">Google Workspace Tools
-					</div>
+						<div><img class="vector-icon" src="svg/google.svg" alt="Responsive Website">Google Workspace Tools</div>
 	
-					<h2 class="mt-3">Soft Skills</h2>
-					<div class="skill-wrap soft">
-						<table>
-							<tr>
-								<td>
-									<div>Problem-solving</div>
-								</td>
-								<td>Ability to solve complex designs, layouts, and UI/UX designs to deliver quality products
-									to meet customer satisfaction.</td>
-							</tr>
-							<tr>
-								<td>
-									<div>Time Management</div>
-								</td>
-								<td>Over 95% of tasks were finished before due time.</td>
-							</tr>
-							<tr>
-								<td>
-									<div>Organizational</div>
-								</td>
-								<td>Utilizing various tools to create documents, notes, and manuals to help keep track of
-									various phases of the website development life cycle.</td>
-							</tr>
-							<tr>
-								<td>
-									<div>Flexibility</div>
-								</td>
-								<td>Adapt to a different organization to meet the standards of the respective work culture.
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<div>Motivation</div>
-								</td>
-								<td>Driven desire to learn new technologies and tools to stay in trends that can lead to new
-									ideas.</td>
-							</tr>
-							<tr>
-								<td>
-									<div>Planning</div>
-								</td>
-								<td>Oversaw communications with stakeholders, and internal and external team members to help
-									execute a solid plan to deliver project goals.</td>
-							</tr>
-							<tr>
-								<td>
-									<div>Communication</div>
-								</td>
-								<td>Good listener and always try to express ideas and opinions to stakeholders, internal and
-									external team members, and customers.</td>
-							</tr>
-							<tr>
-								<td>
-									<div>Leadership</div>
-								</td>
-								<td>Lead and mentor team members with a passion to grow together as a team.</td>
-							</tr>
-						</table>
-					</div>
+						<h2 class="mt-3">Languages</h2>
+						<div><img class="vector-icon" src="svg/myanmar.svg" alt="Myanmar">Myanmar (Native)</div>
+						<div><img class="vector-icon" src="svg/japan.svg" alt="Japanese">Japanese (Fluent)</div>
+						<div><img class="vector-icon" src="svg/usa.svg" alt="English">English (Advanced)</div>
+
+						<h2 class="mt-3">Soft Skills</h2>
+						<div class="skill-wrap soft">
+							<table>
+								<tr>
+									<td>
+										<div>Problem-solving</div>
+									</td>
+									<td>Ability to solve complex designs, layouts, and UI/UX designs to deliver quality products
+										to meet customer satisfaction.</td>
+								</tr>
+								<tr>
+									<td>
+										<div>Time Management</div>
+									</td>
+									<td>Over 95% of tasks were finished before due time.</td>
+								</tr>
+								<tr>
+									<td>
+										<div>Organizational</div>
+									</td>
+									<td>Utilizing various tools to create documents, notes, and manuals to help keep track of
+										various phases of the website development life cycle.</td>
+								</tr>
+								<tr>
+									<td>
+										<div>Flexibility</div>
+									</td>
+									<td>Adapt to a different organization to meet the standards of the respective work culture.
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<div>Motivation</div>
+									</td>
+									<td>Driven desire to learn new technologies and tools to stay in trends that can lead to new
+										ideas.</td>
+								</tr>
+								<tr>
+									<td>
+										<div>Planning</div>
+									</td>
+									<td>Oversaw communications with stakeholders, and internal and external team members to help
+										execute a solid plan to deliver project goals.</td>
+								</tr>
+								<tr>
+									<td>
+										<div>Communication</div>
+									</td>
+									<td>Good listener and always try to express ideas and opinions to stakeholders, internal and
+										external team members, and customers.</td>
+								</tr>
+								<tr>
+									<td>
+										<div>Leadership</div>
+									</td>
+									<td>Lead and mentor team members with a passion to grow together as a team.</td>
+								</tr>
+							</table>
+						</div>
 	
-					<h2 class="mt-3">Languages</h2>
-					<ul>
-						<li>Myanmar (Native)</li>
-						<li>English (Advanced)</li>
-						<li>Japanese (Fluent)</li>
-					</ul>
+
 				</div>
 	
 			</section>
@@ -284,7 +283,6 @@
 			<section id="projects">
 				<div class="wrapper reveal">
 					<h1>Projects</h1>
-					<p>These are some of the projects that I have finished during my career years.</p>
 					<div class="works-items">
 						<div class="row">
 							<!--1-->
