--- a/jp.html
+++ b/jp.html
@@ -137,7 +137,7 @@
 						</div>
 					</div>
 					<div>
-						<a href="resume pdf/履歴書・職務経歴書.zip" class="btn btn-border">履歴書・職務経歴書はこちら</a>
+						<a href="resume pdf/履歴書・職務経歴書.zip" class="btn btn-border" target="_blank">履歴書・職務経歴書はこちら</a>
 					</div>
 	
 				</div>
@@ -163,8 +163,13 @@
 						<div><img class="vector-icon" src="svg/google-analytics.svg" alt="Google Analystics">Google Analystics</div>
 						<div><img class="vector-icon" src="svg/visual-studio-code.svg" alt="Visual Studio">Visual Studio</div>
 						<div><img class="vector-icon" src="svg/responsive.svg" alt="Responsive Website">Responsive Website</div>
-						<div><img class="vector-icon" src="svg/google.svg" alt="Responsive Website">Google Workspace Tools
-						</div>
+						<div><img class="vector-icon" src="svg/google.svg" alt="Responsive Website">Google Workspace Tools</div>
+
+							
+						<h2 class="mt-3">言語</h2>
+						<div><img class="vector-icon" src="svg/myanmar.svg" alt="Myanmar">ミャンマー語 (母語)</div>
+						<div><img class="vector-icon" src="svg/japan.svg" alt="Japanese">日本語 (上級)</div>
+						<div><img class="vector-icon" src="svg/usa.svg" alt="English">英語 (中級)</div>
 					</div>
 	
 					<h2 class="mt-3">自己PR</h2>
@@ -180,13 +185,7 @@
 							私は自分なりにやりがいや喜びを感じながら成長していける職場環境が好きで、その環境造りに自分が持ってる知識や力を全力で生かしていきたいと思います。
 						</p>					
 					</div>
-	
-					<h2 class="mt-3">言語</h2>
-					<ul>
-						<li>ミャンマー語 (母語)</li>
-						<li>英語 (中級)</li>
-						<li>日本語 (上級)</li>
-					</ul>
+
 				</div>
 	
 			</section>
