--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 							<p>
 								A Meticulous web developer requires creativity, a collaborative work environment, and
 								critical thinking.<br>
-								Over 6 years of experience as a creative web developer dedicated to delivering compelling
+								Over 5 years of experience as a creative web developer dedicated to delivering compelling
 								and attractive websites to meet customer satisfaction.<br>
 								Proven experience developing consumer-focused websites using HTML, CSS, WordPress,
 								Illustrator, Photoshop, PHP, and JavaScript as well as creating wire design with Adobe XD
@@ -109,7 +109,7 @@
 						</div>
 					</div>
 					<div>
-						<a href="resume pdf/Resume.pdf" class="btn btn-border" target="_blank">Download Resume</a>
+						<a href="resume pdf/MyaThetChel_Resume.pdf" class="btn btn-border" target="_blank">Download Resume</a>
 					</div>
 	
 				</div>
