--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 						<h2 class="mt-3">Languages</h2>
 						<div><img class="vector-icon" src="svg/myanmar.svg" alt="Myanmar">Myanmar (Native)</div>
 						<div><img class="vector-icon" src="svg/japan.svg" alt="Japanese">Japanese (Fluent)</div>
-						<div><img class="vector-icon" src="svg/usa.svg" alt="English">English (Advanced)</div>
+						<div><img class="vector-icon" src="svg/usa.svg" alt="English">English (Upper-Intermediate)</div>
 
 						<h2 class="mt-3">Soft Skills</h2>
 						<div class="skill-wrap soft">
@@ -201,8 +201,6 @@
 								</tr>
 							</table>
 						</div>
-	
-
 				</div>
 	
 			</section>
