--- a/index.html
+++ b/index.html
@@ -369,11 +369,11 @@
 								</div>
 								<p>
 									Renew the whole website using WordPress.<br>
-									Frontend development starting from design, codes, scheduling, release, and documentation. Effectively communicating with customers to deliver the final product with 100% satisfaction.
+									Frontend development starting from design, codes, scheduling, release, and documentation.
 								</p>
 								<img src="img/shibuya-archery-web.png" alt="">
-								<a href="https://www.shibuya-archery.com/" target="_blank" class="to-page">View Website <i
-										class="fa-solid fa-circle-arrow-right"></i></a>
+								<!-- <a href="https://www.shibuya-archery.com/" target="_blank" class="to-page">View Website <i
+										class="fa-solid fa-circle-arrow-right"></i></a> -->
 							</div>
 							<!--5-->
 							<div class="col">
@@ -415,6 +415,7 @@
 								<p>
 									Website renewal with WordPress based on wireframe from a designer.<br>
 									Create a user manual for customers to update and add news articles.
+									Effectively communicating with customers to deliver the final product with 100% satisfaction.
 								</p>
 								<img src="img/keiei-kanto-gakuin.png" alt="">
 								<a href="http://keiei.kanto-gakuin.ac.jp/" target="_blank" class="to-page">View Website <i
