--- a/jp.html
+++ b/jp.html
@@ -346,8 +346,8 @@
 									デザインのアイデア出しからラフ作成、コーディング、リリースまでのスケジュール作成、ユーザーマニュアル作成を対応。
 								</p>
 								<img src="img/shibuya-archery-web.png" alt="">
-								<a href="https://www.shibuya-archery.com/" target="_blank" class="to-page">View Website <i
-										class="fa-solid fa-circle-arrow-right"></i></a>
+								<!-- <a href="https://www.shibuya-archery.com/" target="_blank" class="to-page">View Website <i
+										class="fa-solid fa-circle-arrow-right"></i></a> -->
 							</div>
 							<!--5-->
 							<div class="col">
